--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
         <span class="d-block d-lg-none">Start Bootstrap</span>
         <span class="d-none d-lg-block">
-          <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpg" alt="">
+          <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/hema.jpg" alt="">
         </span>
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -67,7 +67,7 @@
       <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
         <div class="my-auto">
           <h1 class="mb-0">Hemanth Sabbella
-            <h5>(Sai Hemanth Reddy Sabbella)</h5>>
+            <h5>(Sai Hemanth Reddy Sabbella)</h5>
           </h1>
           <div class="subheading mb-5">Tanuku, West Godavari, Andhra Pradesh. 
             <a href="mailto:name@email.com">sabbellahemanth@gmail.com</a>
@@ -136,9 +136,11 @@
 
 
           <div class="subheading mb-3">Programming</div>
-          <div>Verilog, Perl Scripting, Python, C, Embedded C.</div>>
+          <div>Verilog, Perl Scripting, Python, C, Embedded C.</div>
+
           <div class="subheading mb-3">Tools and Technologies</div>
           <div> Cadence - Virtuoso, Encounter, Synopsys - Design Compiler, Primetime, Eagle CAD, LTspice, Tina, Matlab, Raspberry Pi 3, NI USRP(2920, 2922), NI DAQ(6009), FPGA(Basys 2), 3D printing and modeling(Prusa i3 and LBD makers) and good laboratory skills.</div>
+
           <div class="subheading mb-3">Courses</div>
           <div> Linear Circuits, Analog CMOS, VLSI design flow, Digital Signal Processing, Mixed Signal Design, Embedded Systems, Internet of Things</div>
 
