--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         <div class="my-auto">
           <h2 class="mb-5">Skills</h2>
 
-
+          <div>
           <div class="subheading mb-3">Programming</div>
           <div>Verilog, Perl Scripting, Python, C, Embedded C.</div>
 
@@ -144,7 +144,7 @@
           <div class="subheading mb-3">Courses</div>
           <div> Linear Circuits, Analog CMOS, VLSI design flow, Digital Signal Processing, Mixed Signal Design, Embedded Systems, Internet of Things</div>
 
-
+          </div>
         </div>
       </section>
 
