--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
           <div class="subheading mb-5">Tanuku, West Godavari, Andhra Pradesh. 
             <a href="mailto:name@email.com">sabbellahemanth@gmail.com</a>
           </div>
-          <p class="mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+          <p class="mb-5">I am an Electronics and computers enthusiastic.Everything technical is in hashtags</p>
+          <h5>#CircuitDesigning #VLSI #AnalogCircuits #PCBDesign #EmbeddedElectronics #abitofML</h5>
       
         </div>
       </section>
