--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <a href="mailto:name@email.com">sabbellahemanth@gmail.com</a>
           </div>
           <p class="mb-5">I am an Electronics and computers enthusiastic.Everything technical is in hashtags</p>
-          <h5>#CircuitDesigning #VLSI #AnalogCircuits #PCBDesign #EmbeddedElectronics #abitofML</h5>
+          <p class="mb-5">#CircuitDesigning #VLSI #AnalogCircuits #PCBDesign #EmbeddedElectronics #abitofML</p>
       
         </div>
       </section>
