--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
           <div class="subheading mb-5">Tanuku, West Godavari, Andhra Pradesh. 
             <a href="mailto:name@email.com">sabbellahemanth@gmail.com</a>
           </div>
-          <p class="mb-5">I am an Electronics and computers enthusiastic.Everything technical is in hashtags</p>
-          <p class="mb-5">#CircuitDesigning #VLSI #AnalogCircuits #PCBDesign #EmbeddedElectronics #abitofML</p>
+          <p class="mb-5">I am an Electronics and computers enthusiastic. Everything technical is in hashtags</p>
+          <p>#CircuitDesigning #VLSI #AnalogCircuits #PCBDesign #EmbeddedElectronics #abitofML</p>
       
         </div>
       </section>
