--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="ec">
         <div class="my-auto">
-          <h2 class="mb-5">Extracurricular/h2>
+          <h2 class="mb-5">Extracurricular</h2>
           <div>
           <div class="subheading mb-3">Electroholics, The Electronics club of  IIITD</div>
           <p>->Club  Admin and Coordinator, 2015-16</p>
