--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
         <div class="my-auto">
-          <h1 class="mb-0">Hemanth Sabbella
+          <h2 class="mb-0">Hemanth Sabbella
             <h5>(Sai Hemanth Reddy Sabbella)</h5>
-          </h1>
-          <div class="subheading mb-5">M: 9899494195
+          </h2>
+          <div class="subheading mb-5">M: 9899494195,
             <a href="mailto:name@email.com">sabbellahemanth@gmail.com</a>
           </div>
           <p class="mb-5">I am an Electronics and computers enthusiastic. Everything technical is in hashtags</p>
@@ -79,11 +79,11 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
         <div class="my-auto">
-          <h2 class="mb-5">Experience</h2>
+          <h3 class="mb-5">Experience</h3>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Project Engineer</h3>
+              <h4 class="mb-0">Project Engineer</h4>
               <div class="subheading mb-3">Wipro, Communications BU</div>
               <p>The project in Wipro is about studying the Wipro Holmes bots which are Machine Learning  based, and identify the test cases in them and configuring the bots in T-Mobile, Poland account of Wipro.
     Crowdsourcing projects: A VLSI project on designing an 8 - bit ALU in Verilog and generating the test cases for the same. Alongside, a Perl scripting[certified by Udemy] project on automation cases which is indeed useful in scripting on EDA tools.
@@ -102,11 +102,11 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="education">
         <div class="my-auto">
-          <h2 class="mb-5">Education</h2>
+          <h3 class="mb-5">Education</h3>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">IIITD - Indraprastha Institute of Information Technology, Delhi</h3>
+              <h4 class="mb-0">IIITD - Indraprastha Institute of Information Technology, Delhi</h4>
               <div class="subheading mb-3">Bachelor of Technology</div>
               <div>Electronics and Communications</div>
               <p>GPA: 7.14/10</p>
@@ -132,7 +132,7 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="skills">
         <div class="my-auto">
-          <h2 class="mb-5">Skills</h2>
+          <h3 class="mb-5">Skills</h3>
 
           <div>
           <div class="subheading mb-3">Programming</div>
@@ -155,32 +155,32 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="ec">
         <div class="my-auto">
-          <h2 class="mb-5">Extracurricular</h2>
+          <h3 class="mb-5">Extracurricular</h3>
           <div>
           <div class="subheading mb-3">Electroholics, The Electronics club of  IIITD</div>
-          <p>->Club  Admin and Coordinator, 2015-16</p>
+          <p>--->Club  Admin and Coordinator, 2015-16</p>
 
           <div class="subheading mb-3">Delhi Mini Maker Faire, 2016</div>
-          <p>->Student Coordinator</p>
+          <p>--->Student Coordinator</p>
 
           <div class="subheading mb-3">Esya, tech fest of IIITD</div>
-          <p>->Mentor, HackIIITD & Circuitrix Jr(`16)</p>
-          <p>->Organiser, Circuitrix Jr(`15)</p>
+          <p>--->Mentor, HackIIITD & Circuitrix Jr(`16)</p>
+          <p>--->Organiser, Circuitrix Jr(`15)</p>
 
 
           <div class="subheading mb-3">ECE current’15, vol 3</div>
-          <p>->Content writer - Recent Innovations</p>
-          <p>->Graphic Designer</p>
+          <p>--->Content writer - Recent Innovations</p>
+          <p>--->Graphic Designer</p>
 
           <div class="subheading mb-3">Guest lecture, Introduction to Engineering Design course - IIITD</div>
-          <p>->Basics of PCB Designing</p>
+          <p>--->Basics of PCB Designing</p>
 
           <div class="subheading mb-3">Attainments</div>
-          <p>->stablished an Electronics makerspace in IIITD with Electroholics Admins and mentors</p>p>
-          <p>->1st position in intra IIITD circuit tournament`13</p>
+          <p>--->stablished an Electronics makerspace in IIITD with Electroholics Admins and mentors</p>
+          <p>--->1st position in intra IIITD circuit tournament`13</p>
 
           <div class="subheading mb-3">Interests and hobbies</div>
-          <p>->Watching captivating TV shows and movies, Reading Science alert blogs, playing Guitar and Western dancing</p>
+          <p>--->Watching captivating TV shows and movies, Reading Science alert blogs, playing Guitar and Western dancing</p>
 
 
 
