--- a/index.html
+++ b/index.html
@@ -150,6 +150,16 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="projects">
         <div class="my-auto">
+          <h2 class="mb-5">Projects</h2>
+          <div>
+          <div class="subheading mb-3">Programming</div>
+          <p>Verilog, Perl Scripting, Python, C, Embedded C.</p>
+
+          <div class="subheading mb-3">Tools and Technologies</div>
+          <p> Cadence - Virtuoso, Encounter, Synopsys - Design Compiler, Primetime, Eagle CAD, LTspice, Tina, Matlab, Raspberry Pi 3, NI USRP(2920, 2922), NI DAQ(6009), FPGA(Basys 2), 3D printing and modeling(Prusa i3 and LBD makers) and good laboratory skills.</p>
+
+          <div class="subheading mb-3">Courses</div>
+          <p> Linear Circuits, Analog CMOS, VLSI design flow, Digital Signal Processing, Mixed Signal Design, Embedded Systems, Internet of Things</p>
           
       </section>
 
@@ -158,29 +168,29 @@
           <h2 class="mb-5">Extracurricular</h2>
           <div>
           <div class="subheading mb-3">Electroholics, The Electronics club of  IIITD</div>
-          <p>--->Club  Admin and Coordinator, 2015-16</p>
+          <p>   --->Club  Admin and Coordinator, 2015-16</p>
 
           <div class="subheading mb-3">Delhi Mini Maker Faire, 2016</div>
-          <p>--->Student Coordinator</p>
+          <p>   --->Student Coordinator</p>
 
           <div class="subheading mb-3">Esya, tech fest of IIITD</div>
-          <p>--->Mentor, HackIIITD & Circuitrix Jr(`16)</p>
-          <p>--->Organiser, Circuitrix Jr(`15)</p>
+          <p>   --->Mentor, HackIIITD & Circuitrix Jr(`16)</p>
+          <p>   --->Organiser, Circuitrix Jr(`15)</p>
 
 
           <div class="subheading mb-3">ECE current’15, vol 3</div>
-          <p>--->Content writer - Recent Innovations</p>
-          <p>--->Graphic Designer</p>
+          <p>   --->Content writer - Recent Innovations</p>
+          <p>   --->Graphic Designer</p>
 
           <div class="subheading mb-3">Guest lecture, Introduction to Engineering Design course - IIITD</div>
-          <p>--->Basics of PCB Designing</p>
+          <p>   --->Basics of PCB Designing</p>
 
           <div class="subheading mb-3">Attainments</div>
-          <p>--->stablished an Electronics makerspace in IIITD with Electroholics Admins and mentors</p>
-          <p>--->1st position in intra IIITD circuit tournament`13</p>
+          <p>   --->stablished an Electronics makerspace in IIITD with Electroholics Admins and mentors</p>
+          <p>   --->1st position in intra IIITD circuit tournament`13</p>
 
           <div class="subheading mb-3">Interests and hobbies</div>
-          <p>--->Watching captivating TV shows and movies, Reading Science alert blogs, playing Guitar and Western dancing</p>
+          <p>   --->Watching captivating TV shows and movies, Reading Science alert blogs, playing Guitar and Western dancing</p>
 
 
 
