--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
         <div class="my-auto">
           <h2 class="mb-0">Hemanth Sabbella
-            <h5>(Sai Hemanth Reddy Sabbella)</h5>
+            <span>(Sai Hemanth Reddy Sabbella)</span>
           </h2>
           <div class="subheading mb-5">M: 9899494195,
             <a href="mailto:name@email.com">sabbellahemanth@gmail.com</a>
@@ -186,7 +186,7 @@
           <p>   --->Basics of PCB Designing</p>
 
           <div class="subheading mb-3">Attainments</div>
-          <p>   --->stablished an Electronics makerspace in IIITD with Electroholics Admins and mentors</p>
+          <p>   --->Established an Electronics makerspace in IIITD with Electroholics Admins and mentors</p>
           <p>   --->1st position in intra IIITD circuit tournament`13</p>
 
           <div class="subheading mb-3">Interests and hobbies</div>
