--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
         <div class="my-auto">
           <h2 class="mb-0">Hemanth Sabbella
-            <span>(Sai Hemanth Reddy Sabbella)</span>
+            <span class="text-primary">(Sai Hemanth Reddy Sabbella)</span>
           </h2>
           <div class="subheading mb-5">M: 9899494195,
             <a href="mailto:name@email.com">sabbellahemanth@gmail.com</a>
