--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Project Engineer</h3>
               <div class="subheading mb-3">Wipro, Communications BU</div>
-              <p>The project in Wipro is about studying the Wipro Holmes bots which are Machine Learning  based, and identify the test cases in them and configuring the bots in T-Mobile, Poland account of Wipro.
-    Crowdsourcing projects: A VLSI project on designing an 8 - bit ALU in Verilog and generating the test cases for the same. Alongside, a Perl scripting[certified by Udemy] project on automation cases which is indeed useful in scripting on EDA tools.
+              <p>The project in Wipro is about studying the Wipro Holmes bots which are Machine Learning  based, and identify the test cases in them and configuring the bots in T-Mobile, Poland account of Wipro.</p>
+    <p>Crowdsourcing projects: A VLSI project on designing an 8 - bit ALU in Verilog and generating the test cases for the same. Alongside, a Perl scripting[certified by Udemy] project on automation cases which is indeed useful in scripting on EDA tools.
 </p>
             </div>
             <div class="resume-date text-md-right">
