--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <div class="subheading mb-5">M: 9899494195,
             <a href="mailto:name@email.com">sabbellahemanth@gmail.com</a>
           </div>
-          <p class="mb-5">I am an Electronics and computers enthusiastic. Everything technical is in hashtags</p>
+          <p class="mb-5">I am an Electronics and computers enthusiastic. Currently, working in Wipro, Communications BU and graduated from IIITD. Everything I am into is in hashtags</p>
           
       
         </div>
