--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
       <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
         <div class="my-auto">
           <h2 class="mb-0">Hemanth Sabbella
-            <h7>(Sai Hemanth Reddy Sabbella)</h7>
+            <span class="text-secondary">(Sai Hemanth Reddy Sabbella)</span>
           </h2>
           <div class="subheading mb-5">M: 9899494195,
             <a href="mailto:name@email.com">sabbellahemanth@gmail.com</a>
           </div>
           <p class="mb-5">I am an Electronics and computers enthusiastic. Currently, working in Wipro, Communications BU and graduated from IIITD. Everything I am into is in hashtags</p>
-          <a>#CircuitDesign #PCBDesign #VLSI #AnalogCircuits #EmbeddedElectronics #AbitofML</a>
+          <h6 class="text-secondary">#CircuitDesign #PCBDesign #VLSI #AnalogCircuits #EmbeddedElectronics #AbitofML</h6>
           
       
         </div>
