--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
             <span class="text-secondary">(Sai Hemanth Reddy Sabbella)</span>
           </h2>
           <div class="subheading mb-5">M: 9899494195,
-            <a href="mailto:name@email.com">sabbellahemanth@gmail.com</a>
+            <a href="mailto:sabbellahemanth@gmail.com" class="text-primary" >sabbellahemanth@gmail.com</a>
           </div>
           <p class="mb-5">I am an Electronics and computers enthusiastic. Currently, working in Wipro, Communications BU and graduated from IIITD. Everything I am into is in hashtags</p>
-          <h7>#CircuitDesign #PCBDesign #VLSI #AnalogCircuits #EmbeddedElectronics #AbitofML</h7>
+          <h7 class="text-primary">#CircuitDesign #PCBDesign #VLSI #AnalogCircuits #EmbeddedElectronics #AbitofML</h7>
           
       
         </div>
