--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <div class="subheading mb-5">M: 9899494195,
             <a href="mailto:sabbellahemanth@gmail.com" class="text-primary" >sabbellahemanth@gmail.com</a>
           </div>
-          <p class="mb-5">I am an Electronics and computers enthusiastic. Currently, working in Wipro, Communications BU and graduated from IIITD. Everything I am into is in hashtags</p>
+          <p class="mb-5">I am an Electronics and Computers enthusiastic. Currently, working in Wipro, Communications BU and graduated from IIITD in ECE'17. Everything I am into is in hashtags</p>
           <h7 class="text-primary">#CircuitDesign #PCBDesign #VLSI #AnalogCircuits #EmbeddedElectronics #AbitofML</h7>
           
       
@@ -140,7 +140,7 @@
           <p>Verilog, Perl Scripting, Python, C, Embedded C.</p>
 
           <div class="subheading mb-3">Tools and Technologies</div>
-          <p> Cadence - Virtuoso, Encounter, Synopsys - Design Compiler, Primetime, Eagle CAD, LTspice, Tina, Matlab, Raspberry Pi 3, NI USRP(2920, 2922), NI DAQ(6009), FPGA(Basys 2), 3D printing and modeling(Prusa i3 and LBD makers) and good laboratory skills.</p>
+          <p> Eagle CAD, Cadence - Virtuoso, Encounter, Synopsys - Design Compiler, Primetime, LTspice, Tina, Matlab, Raspberry Pi 3, FPGA(Basys 2), NI USRP(2920, 2922), NI DAQ(6009), 3D printing and modeling(Prusa i3 and LBD makers) and good laboratory skills..</p>
 
           <div class="subheading mb-3">Courses</div>
           <p> Linear Circuits, Analog CMOS, VLSI design flow, Digital Signal Processing, Mixed Signal Design, Embedded Systems, Internet of Things</p>
@@ -164,9 +164,9 @@ Tools: Cadence - Virtuoso</p>
           <p> EMI Sensing Board - Design and Fabrication of EMI sensing board using current transformer with a low noise amplifier[Research project]. 
 Constant Current LED driver board: Design and Fabrication of constant current LED board for testing the spectrometer. 
 IIITDuino: Design of in home version of arduino for IIITD with is compatible with the courses. 
-Breakout Boards and custom made libraries: Mux - ADG736, ADG719, LEDs - 1316, L424, LHT674, OSI-330 series, VS. 
-Guide and Collaborator: Manoj Gulati, Ph.D student, IIITD. 
-       Tools: Eagle CAD. </p>
+Breakout Boards and custom made libraries: Mux - ADG736, ADG719, LEDs - 1316, L424, LHT674, OSI-330 series, VS. </p> 
+<div>Guide and Collaborator: Manoj Gulati, Ph.D student, IIITD.</div>
+      <div> Tools: Eagle CAD.</div>
 
        <div>
           <div class="subheading mb-3"> Design and Implementation of a Serial to Parallel and Parallel to Serial IC.</div>
