--- a/index.html
+++ b/index.html
@@ -161,14 +161,16 @@
 Tools: Cadence - Virtuoso</p>
 
           <div class="subheading mb-3">PCB/Circuit Design and Fabrication</div>
-          <p> EMI Sensing Board - Design and Fabrication of EMI sensing board using current transformer with a low noise amplifier[Research project]. 
+          <div> EMI Sensing Board - Design and Fabrication of EMI sensing board using current transformer with a low noise amplifier[Research project]. 
 Constant Current LED driver board: Design and Fabrication of constant current LED board for testing the spectrometer. 
 IIITDuino: Design of in home version of arduino for IIITD with is compatible with the courses. 
-Breakout Boards and custom made libraries: Mux - ADG736, ADG719, LEDs - 1316, L424, LHT674, OSI-330 series, VS. </p> 
+Breakout Boards and custom made libraries: Mux - ADG736, ADG719, LEDs - 1316, L424, LHT674, OSI-330 series, VS. </div> 
 <div>Guide and Collaborator: Manoj Gulati, Ph.D student, IIITD.</div>
       <div> Tools: Eagle CAD.</div>
+      <a href="https://github.com/HemanthSabbella/PCBDesign" class="text-primary" >Designs[Link]</a>
 
-       <div>
+
+       <div>https://github.com/HemanthSabbella/PCBDesign
           <div class="subheading mb-3"> Design and Implementation of a Serial to Parallel and Parallel to Serial IC.</div>
           <p>Design and Implementation of an IC that can convert Serial input to parallel output, Parallel input to Serial output and Parallel input to Parallel output. From Idea to GDS, the whole VLSI flow is implemented using the below tools and platforms.
 Guide: Dr. Sneh Saurabh
