--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ Breakout Boards and custom made libraries: Mux - ADG736, ADG719, LEDs - 1316, L4
       <a href="https://github.com/HemanthSabbella/PCBDesign" class="text-primary" >Designs[Link]</a>
 
 
-       <div>https://github.com/HemanthSabbella/PCBDesign
+       <div>
           <div class="subheading mb-3"> Design and Implementation of a Serial to Parallel and Parallel to Serial IC.</div>
           <p>Design and Implementation of an IC that can convert Serial input to parallel output, Parallel input to Serial output and Parallel input to Parallel output. From Idea to GDS, the whole VLSI flow is implemented using the below tools and platforms.
 Guide: Dr. Sneh Saurabh
