--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ IIITDuino: Design of in home version of arduino for IIITD with is compatible wit
 Breakout Boards and custom made libraries: Mux - ADG736, ADG719, LEDs - 1316, L424, LHT674, OSI-330 series, VS. </div> 
 <div>Guide and Collaborator: Manoj Gulati, Ph.D student, IIITD.</div>
       <div> Tools: Eagle CAD.</div>
-      <a href="https://github.com/HemanthSabbella/PCBDesign" class="text-primary" >Designs[Link]</a>
+      <p href="https://github.com/HemanthSabbella/PCBDesign" class="text-primary" >Designs[Link]</p>
 
 
        <div>
