--- a/index.html
+++ b/index.html
@@ -154,11 +154,17 @@
           <h2 class="mb-5">Projects</h2>
           <div>
           <div class="subheading mb-3">4th order Switched Capacitor narrowband BandPass filter</div>
-          <p>Design of a transistor level narrow bandpass filter of 4th order to filter out the brain waves of frequency range 25 Hz-100 Hz. Guide: Dr. Pydi Ganga Tools: Cadence - Virtuoso.</p>
+          <div>Design of a transistor level narrow bandpass filter of 4th order to filter out the brain waves of frequency range 25 Hz-100 Hz.  </div>
+          <div>Guide: Dr. Pydi Ganga</div>
+      <div> Tools: Cadence - Virtuoso.</div>
+      <p href="https://github.com/HemanthSabbella/PCBDesign" class="text-primary" >Report[Link]</p>
 
           <div class="subheading mb-3">Low power CMOS comparator</div>
-          <p> Design of low power CMOS comparator using a differential amplifier with a gain enhancement stage. Guide: Dr. M.S.Hashmi
-Tools: Cadence - Virtuoso</p>
+          <div> Design of low power CMOS comparator using a differential amplifier with a gain enhancement stage. 
+</div>
+<div>Guide: Dr. M.S.Hashmi</div>
+      <div> Tools: Cadence - Virtuoso</div>
+      <p href="https://github.com/HemanthSabbella/PCBDesign" class="text-primary" >Report[Link]</p>
 
           <div class="subheading mb-3">PCB/Circuit Design and Fabrication</div>
           <div> EMI Sensing Board - Design and Fabrication of EMI sensing board using current transformer with a low noise amplifier[Research project]. 
@@ -172,26 +178,36 @@ Breakout Boards and custom made libraries: Mux - ADG736, ADG719, LEDs - 1316, L4
 
        <div>
           <div class="subheading mb-3"> Design and Implementation of a Serial to Parallel and Parallel to Serial IC.</div>
-          <p>Design and Implementation of an IC that can convert Serial input to parallel output, Parallel input to Serial output and Parallel input to Parallel output. From Idea to GDS, the whole VLSI flow is implemented using the below tools and platforms.
-Guide: Dr. Sneh Saurabh
-   Tools and technologies: Synopsis – DC, VCS, PrimeTime. Cadence – Encounter.
-   Language: Verilog.</p>
+          <div>Design and Implementation of an IC that can convert Serial input to parallel output, Parallel input to Serial output and Parallel input to Parallel output. From Idea to GDS, the whole VLSI flow is implemented using the below tools and platforms.</div>
+
+   
+   
+   <div>Guide: Dr. Sneh Saurabh</div>
+      <div> TTools and technologies: Synopsis – DC, VCS, PrimeTime. Cadence – Encounter.</div>
+      <div>Language: Verilog.</div>
+      <p href="https://github.com/HemanthSabbella/PCBDesign" class="text-primary" >Reports[Link]</p>
 
           <div class="subheading mb-3">SoC Security: A logic level methodology to prevent Differential power analysis</div>
-          <p> Measuring the power consumption of the every logic transition will reveal the information the is being processed in the chip. This project is to develop a logic methodology which has constant power consumption for every transition. A side channel attack is implemented on the FPGA with the logic methodology that was developed and seen that the power consumption is constant.
-Guide: Dr. Sujay Deb
-Technologies used: FPGA and DPO
-Language: Verilog.</p>
+          <div> Measuring the power consumption of the every logic transition will reveal the information the is being processed in the chip. This project is to develop a logic methodology which has constant power consumption for every transition. A side channel attack is implemented on the FPGA with the logic methodology that was developed and seen that the power consumption is constant.
+
+</div>
+<div>Guide: Dr. Sujay Deb</div>
+      <div>Technologies and Languages: FPGA, DPO and Verilog </div>
+      <p href="https://github.com/HemanthSabbella/PCBDesign" class="text-primary" >PPT[Link]</p>
 
           <div class="subheading mb-3">Red ball detection on Quadcopter</div>
-          <p> The project is an implementation of PID controller on Quadcopter for tracking red ball in triaxial which is based on Python and openCV on Robotic Operating System(ROS).      
-Guide: Dr. P. B. Sujit.                   
-Language used: Python libraries.</p>
+          <div> The project is an implementation of PID controller on Quadcopter for tracking red ball in triaxial which is based on Python and openCV on Robotic Operating System(ROS).      
+</div>
+<div>Guide: Dr. P. B. Sujit.</div>
+      <div>                    
+Language used: Python libraries.</div>
+      <p href="https://github.com/HemanthSabbella/PCBDesign" class="text-primary" >Code[Link]</p>
  
         <div class="subheading mb-3">Signal inpainting on graphs</div>
-          <p> The projects aims to implement an algorithm that can recreate missing parts of a signal using graph variation minimization and regulation on graph representation of data    
-Guide: Dr. Anubha Gupta                   
-Technologies used: Matlab.</p>
+          <div> The projects aims to implement an algorithm that can recreate missing parts of a signal using graph variation minimization and regulation on graph representation of data. </div>
+<div>Guide: Dr. Anubha Gupta.</div>
+      <div> Technologies used: Matlab.</div>
+      <p href="https://github.com/HemanthSabbella/PCBDesign" class="text-primary" >Report[Link]</p>
 
 
           </div>
