--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
             <a class="nav-link js-scroll-trigger" href="#about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#education">Experience</a>
+            <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#experience">Education</a>
+            <a class="nav-link js-scroll-trigger" href="#education">Education</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
@@ -164,7 +164,7 @@
 </div>
 <div>Guide: Dr. M.S.Hashmi</div>
       <div> Tools: Cadence - Virtuoso</div>
-      <p href="https://github.com/HemanthSabbella/Project_Reports/blob/master/CMOS_Project.pdf" class="text-primary" >Report[Link]</p>
+      <a href="https://github.com/HemanthSabbella/Project_Reports/blob/master/CMOS_Project.pdf" class="text-primary" >Report[Link]</a>
 
           <div class="subheading mb-3">PCB/Circuit Design and Fabrication</div>
           <div> EMI Sensing Board - Design and Fabrication of EMI sensing board using current transformer with a low noise amplifier[Research project]. 
