--- a/index.html
+++ b/index.html
@@ -157,15 +157,15 @@
           <div>Design of a transistor level narrow bandpass filter of 4th order to filter out the brain waves of frequency range 25 Hz-100 Hz.  </div>
           <div>Guide: Dr. Pydi Ganga</div>
           <div> Tools: Cadence - Virtuoso.</div>
-          <a href="https://github.com/HemanthSabbella/Project_Reports/blob/master/MSD_project.pdf" class="text-primary" >Report[Link]</a>
-          <br />
+          <a href="https://github.com/HemanthSabbella/Project_Reports/blob/master/MSD_project.pdf" class="text-primary" >Report[Link]<br /></a>
+          <br>
 
           <div class="subheading mb-3">Low power CMOS comparator</div>
           <div> Design of low power CMOS comparator using a differential amplifier with a gain enhancement stage.</div>
           <div>Guide: Dr. M.S.Hashmi</div>
           <div> Tools: Cadence - Virtuoso</div>
-          <a href="https://github.com/HemanthSabbella/Project_Reports/blob/master/CMOS_Project.pdf" class="text-primary" >Report[Link]</a>
-          <br />
+          <a href="https://github.com/HemanthSabbella/Project_Reports/blob/master/CMOS_Project.pdf" class="text-primary" >Report[Link]<br /></a>
+          <br>
 
           <div class="subheading mb-3">PCB/Circuit Design and Fabrication</div>
           <div> EMI Sensing Board - Design and Fabrication of EMI sensing board using current transformer with a low noise amplifier[Research project]. <br />
@@ -174,8 +174,8 @@
           Breakout Boards and custom made libraries: Mux - ADG736, ADG719, LEDs - 1316, L424, LHT674, OSI-330 series, VS. </div> 
           <div>Guide and Collaborator: Manoj Gulati, Ph.D student, IIITD.</div>
           <div> Tools: Eagle CAD.</div>
-          <a href="https://github.com/HemanthSabbella/PCBDesign" class="text-primary" >Designs[Link]</a>
-          <br />
+          <a href="https://github.com/HemanthSabbella/PCBDesign" class="text-primary" >Designs[Link]<br /></a>
+          <br>
 
 
           <div>
@@ -187,31 +187,31 @@
           <div>Guide: Dr. Sneh Saurabh</div>
           <div> Tools and technologies: Synopsis – DC, VCS, PrimeTime. Cadence – Encounter.</div>
           <div>Language: Verilog.</div>
-          <a href="https://github.com/HemanthSabbella/Signal_inpainting" class="text-primary" >Reports[Link]</a>
-          <br />
+          <a href="https://github.com/HemanthSabbella/Signal_inpainting" class="text-primary" >Reports[Link]<br /></a>
+          <br>
 
           <div class="subheading mb-3">SoC Security: A logic level methodology to prevent Differential power analysis</div>
           <div> Measuring the power consumption of the every logic transition will reveal the information the is being processed in the chip. This project is to develop a logic methodology which has constant power consumption for every transition. A side channel attack is implemented on the FPGA with the logic methodology that was developed and seen that the power consumption is constant.</div>
           <div>Guide: Dr. Sujay Deb</div>
           <div>Technologies and Languages: FPGA, DPO and Verilog </div>
-          <a href="https://github.com/HemanthSabbella/Project_Reports/blob/master/SoC%20Presentation.pdf" class="text-primary" >PPT[Link]</a>
-          <br />
+          <a href="https://github.com/HemanthSabbella/Project_Reports/blob/master/SoC%20Presentation.pdf" class="text-primary" >PPT[Link]<br /></a>
+          <br>
 
 
           <div class="subheading mb-3">Red ball detection on Quadcopter</div>
           <div> The project is an implementation of PID controller on Quadcopter for tracking red ball in triaxial which is based on Python and openCV on Robotic Operating System(ROS).</div>
           <div>Guide: Dr. P. B. Sujit.</div>
           <div>Language used: Python libraries.</div>
-          <a href="https://github.com/HemanthSabbella/Project_Reports/blob/master/robotics_ardrone.py" class="text-primary" >Code[Link]</a>
-          <br />
+          <a href="https://github.com/HemanthSabbella/Project_Reports/blob/master/robotics_ardrone.py" class="text-primary" >Code[Link]<br /></a>
+          <br>
 
  
           <div class="subheading mb-3">Signal inpainting on graphs</div>
           <div> The projects aims to implement an algorithm that can recreate missing parts of a signal using graph variation minimization and regulation on graph representation of data. </div>
           <div>Guide: Dr. Anubha Gupta.</div>
           <div> Technologies used: Matlab.</div>
-          <a href="https://github.com/HemanthSabbella/Signal_inpainting" class="text-primary" >Report[Link]</a>
-          <br />
+          <a href="https://github.com/HemanthSabbella/Signal_inpainting" class="text-primary" >Report[Link] <br /></a>
+          <br>
 
 
           </div>
