--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
   <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Research Assisant</h3>
-              <div class="subheading mb-3">Neuronics lab, IIScdiv>
+              <div class="subheading mb-3">Neuronics lab, IISc</div>
               <p>Currently, working on Circuit Designing and FPGA design of Ultrasound imaging in Neuronics lab, Indian Institute of Science </p>
             </div>
             <div class="resume-date text-md-right">
