--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 </p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">September 2017 - Present</span>
+              <span class="text-primary">September 2017 - October 2018</span>
             </div>
           </div>
 
