--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
 
     <title>Hemanth Sabbella</title>
-    <link rel="icon" type="image/ico" href="images/logo.png" />
+    <link rel="icon" type="image/ico" href="img/logo.png" />
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
