--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
               <span class="text-primary">October 2018 - Present</span>
             </div>
           </div>
-          
+          <hr>
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Project Engineer</h3>
@@ -242,30 +242,30 @@
           <h2 class="mb-5">Extracurricular</h2>
           <div>
           <div class="subheading mb-3">Electroholics, The Electronics club of  IIITD</div>
-          <p>   --->Club  Admin and Coordinator, 2015-16</p>
-
+          <p>   *Club  Admin and Coordinator, 2015-16</p>
+          <hr>
           <div class="subheading mb-3">Delhi Mini Maker Faire, 2016</div>
-          <p>   --->Student Coordinator and Volunteer</p>
-
+          <p>   >Student Coordinator and Volunteer</p>
+          <hr>
           <div class="subheading mb-3">Esya, tech fest of IIITD</div>
-          <p>   --->Mentor, HackIIITD & Circuitrix Jr(`16)</p>
+          <p>   =>Mentor, HackIIITD & Circuitrix Jr(`16)</p>
           <p>   --->Organiser, Circuitrix Jr(`15)</p>
-
+          <hr>
 
           <div class="subheading mb-3">ECE current’15, vol 3</div>
           <p>   --->Content writer - Recent Innovations</p>
           <p>   --->Graphic Designer</p>
-
+          <hr>
           <div class="subheading mb-3">Guest lecture, Introduction to Engineering Design course - IIITD</div>
           <p>   --->Basics of PCB Designing</p>
-
+          <hr>
           <div class="subheading mb-3">Attainments</div>
           <p>   --->Established an Electronics makerspace in IIITD with Electroholics Admins and mentors</p>
           <p>   --->1st position in intra IIITD circuit tournament`13</p>
-
+          <hr>
           <div class="subheading mb-3">Interests and hobbies</div>
           <p>   --->Watching captivating TV shows and movies, reading Science alert blogs, playing Guitar, capturing through lens and western dancing</p>
-
+    
 
 
 
