--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
           <p>   >Student Coordinator and Volunteer</p>
           <hr>
           <div class="subheading mb-3">Esya, tech fest of IIITD</div>
-          <p>   =>Mentor, HackIIITD & Circuitrix Jr(`16)</p>
+          <p>  &#8594 Mentor, HackIIITD & Circuitrix Jr(`16)</p>
           <p>   --->Organiser, Circuitrix Jr(`15)</p>
           <hr>
 
