--- a/index.html
+++ b/index.html
@@ -242,29 +242,29 @@
           <h2 class="mb-5">Extracurricular</h2>
           <div>
           <div class="subheading mb-3">Electroholics, The Electronics club of  IIITD</div>
-          <p>   *Club  Admin and Coordinator, 2015-16</p>
+          <p>     &#8594 Club  Admin and Coordinator, 2015-16</p>
           <hr>
           <div class="subheading mb-3">Delhi Mini Maker Faire, 2016</div>
-          <p>   >Student Coordinator and Volunteer</p>
+          <p>     &#8594 Student Coordinator and Volunteer</p>
           <hr>
           <div class="subheading mb-3">Esya, tech fest of IIITD</div>
           <p>  &#8594 Mentor, HackIIITD & Circuitrix Jr(`16)</p>
-          <p>   --->Organiser, Circuitrix Jr(`15)</p>
+          <p>  &#8594 Organiser, Circuitrix Jr(`15)</p>
           <hr>
 
           <div class="subheading mb-3">ECE current’15, vol 3</div>
-          <p>   --->Content writer - Recent Innovations</p>
-          <p>   --->Graphic Designer</p>
+          <p>     &#8594 Content writer - Recent Innovations</p>
+          <p>    &#8594 Graphic Designer</p>
           <hr>
           <div class="subheading mb-3">Guest lecture, Introduction to Engineering Design course - IIITD</div>
-          <p>   --->Basics of PCB Designing</p>
+          <p>     &#8594 Basics of PCB Designing</p>
           <hr>
           <div class="subheading mb-3">Attainments</div>
-          <p>   --->Established an Electronics makerspace in IIITD with Electroholics Admins and mentors</p>
-          <p>   --->1st position in intra IIITD circuit tournament`13</p>
+          <p>     &#8594 Established an Electronics makerspace in IIITD with Electroholics Admins and mentors</p>
+          <p>     &#8594 1st position in intra IIITD circuit tournament`13</p>
           <hr>
           <div class="subheading mb-3">Interests and hobbies</div>
-          <p>   --->Watching captivating TV shows and movies, reading Science alert blogs, playing Guitar, capturing through lens and western dancing</p>
+          <p>    &#8594 Watching captivating TV shows and movies, reading Science alert blogs, playing Guitar, capturing through lens and western dancing</p>
     
 
 
