--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-
     <title>Hemanth Sabbella</title>
     <link rel="icon" type="image/ico" href="img/logo.png" />
     <!-- Bootstrap core CSS -->
@@ -22,7 +21,11 @@
 
     <!-- Custom styles for this template -->
     <link href="css/resume.css" rel="stylesheet">
-
+    <style>
+    img {
+      float: left;
+    }
+    </style>
   </head>
 
   <body id="page-top">
@@ -173,7 +176,7 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="projects">
         <div class="my-auto">
           <h2 class="mb-5">Projects</h2>
-          <div>
+          <div><img src="https://www.w3schools.com/images/w3schools_green.jpg" width="100" height="140">
           <div class="subheading mb-3">4th order Switched Capacitor narrowband BandPass filter</div>
           <div>Design of a transistor level narrow bandpass filter of 4th order to filter out the brain waves of frequency range 25 Hz-100 Hz.  </div>
           <div>Guide: Dr. Pydi Ganga</div>
