--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <style>
     img {
       float: left;
-      border: 2px;
+      padding: 10px 10px 10px 10px;
     }
     </style>
   </head>
