--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <style>
     img {
       float: left;
-      padding: 15px 15px 15px 15px;
+      padding-left: 15px; 
     }
     </style>
   </head>
