--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
           <div>Design of a transistor level narrow bandpass filter of 4th order to filter out the brain waves of frequency range 25 Hz-100 Hz.  </div>
           <div>Guide: Dr. Pydi Ganga</div>
           <div> Tools: Cadence - Virtuoso.</div>
-          <a href="https://github.com/HemanthSabbella/Project_Reports/blob/master/MSD_project.pdf" class="text-primary" >Report[Link]<br /></a>
+          <a https://github.com/HemanthSabbella/Project_Reports/blob/master/MSD_project_final.pdf" class="text-primary" >Poster[Link]<br /></a>
           <br>
           <hr>
           <div class="subheading mb-3">Low power CMOS comparator</div>
