--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
           <div>Guide: Dr. Sneh Saurabh</div>
           <div> Tools and technologies: Synopsis – DC, VCS, PrimeTime. Cadence – Encounter.</div>
           <div>Language: Verilog.</div>
-          <a href="https://github.com/HemanthSabbella/Signal_inpainting" class="text-primary" >Reports[Link]<br /></a>
+          <a href="https://github.com/HemanthSabbella/Project_Reports/blob/master/VLSI_Design_Flow.pdf" class="text-primary" >Reports[Link]<br /></a>
           <br>
           <hr>
             
