--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <a href="mailto:sabbellahemanth@gmail.com" class="text-primary" >sabbellahemanth@gmail.com</a>
           </div>
           <p class="mb-5">I am an Electronics and Computers enthusiastic. Currently, working in Neuronics lab, IISc and graduated from IIITD in ECE'17. Everything I am into is in hashtags</p>
-          <h7 class="text-primary">#CircuitDesign #PCBDesign #VLSI #AnalogCircuits #EmbeddedElectronics #AbitofML</h7>
+          <h7 class="text-primary"> #VLSI #AnalogCircuits #EmbeddedElectronics #CircuitDesign #PCBDesign #AbitofML</h7>
           
       
         </div>
