--- a/index.html
+++ b/index.html
@@ -269,7 +269,9 @@
           <hr>
           <div class="subheading mb-3">Interests and hobbies</div>
           <p>    &#8594 Watching captivating TV shows and movies, reading Science alert blogs, playing Guitar, capturing through lens and western dancing</p>
-    
+          <hr>
+          <div class="subheading mb-3">Community Work at Shanti Sayhog</div>
+          <p>     &#8594 Volunteered for educating Delhi slum children in Summer-2017. 
 
 
 
