--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
           <p>     &#8594 1st position in intra IIITD circuit tournament`13</p>
           <hr>
           <div class="subheading mb-3">Interests and hobbies</div>
-          <p>    &#8594 Watching captivating TV shows and movies, reading Science alert blogs, playing Guitar, capturing through lens and western dancing</p>
+          <p>    &#8594 Watching captivating TV shows and movies, reading Science alert blogs, playing Guitar, capturing through lens(Image published in <a href="https://www.instagram.com/p/BtlRFouA79c/">natgeotravelerindia</a>) and western dancing</p>
           <hr>
           <div class="subheading mb-3">Community Work at Shanti Sayhog</div>
           <p>     &#8594 Volunteered for educating Delhi slum children in Summer-2017. 
