--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
           <p>     &#8594 1st position in intra IIITD circuit tournament`13</p>
           <hr>
           <div class="subheading mb-3">Interests and hobbies</div>
-          <p>    &#8594 Reading science alert blogs, capturing through lens(an image got published in <a href="https://www.instagram.com/p/BtlRFouA79c/">natgeotravelerindia</a>),  playing guitar, western dancing and watching captivating TV shows and movies. </p>
+          <p>    &#8594 Reading science alert blogs, capturing through lens(an image got published in <a href="https://www.instagram.com/p/BtlRFouA79c/" class="text-primary">natgeotravelerindia</a>),  playing guitar, western dancing and watching captivating TV shows and movies. </p>
           <hr>
           <div class="subheading mb-3">Community Work at Shanti Sayhog</div>
           <p>     &#8594 Volunteered for educating Delhi slum children in Summer-2017. 
