--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
           <p>  &#8594 Organiser, Circuitrix Jr(`15)</p>
           <hr>
 
-          <div class="subheading mb-3">ECE current’15, vol 3<a href="https://github.com/HemanthSabbella/HemanthSabbella.github.io/blob/master/ECE%20Newsletter%20Volume%203.pdf" class="text=primary">[c]</a></div>
+          <div class="subheading mb-3">ECE current’15, vol 3<a href="https://github.com/HemanthSabbella/HemanthSabbella.github.io/blob/master/ECE%20Newsletter%20Volume%203.pdf" class="text=primary">[n]</a></div>
           <p>     &#8594 Content writer - Recent Innovations</p>
           <p>    &#8594 Graphic Designer</p>
           <hr>
