--- a/index.html
+++ b/index.html
@@ -251,12 +251,12 @@
           <div class="subheading mb-3">Delhi Mini Maker Faire, 2016<a href="https://github.com/HemanthSabbella/HemanthSabbella.github.io/blob/master/img/DMMF.jpg" class="text-primary">[c]</a></div>
           <p>     &#8594 Student Coordinator and Volunteer</p>
           <hr>
-          <div class="subheading mb-3">Esya, tech fest of IIITD</div>
+          <div class="subheading mb-3">Esya, tech fest of IIITD<a href="https://github.com/HemanthSabbella/HemanthSabbella.github.io/blob/master/img/Circuitrix'15.jpg" class="text-primary">[p]</a></div>
           <p>  &#8594 Mentor, HackIIITD & Circuitrix Jr(`16)</p>
           <p>  &#8594 Organiser, Circuitrix Jr(`15)</p>
           <hr>
 
-          <div class="subheading mb-3">ECE current’15, vol 3<a href="https://github.com/HemanthSabbella/HemanthSabbella.github.io/blob/master/ECE%20Newsletter%20Volume%203.pdf" class="text=primary">[n]</a></div>
+          <div class="subheading mb-3">ECE current’15, vol 3<a href="https://github.com/HemanthSabbella/HemanthSabbella.github.io/blob/master/img/NGO_CommunityWork.jpg" class="text-primary">[n]</a></div>
           <p>     &#8594 Content writer - Recent Innovations</p>
           <p>    &#8594 Graphic Designer</p>
           <hr>
