--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           <div class="subheading mb-5">M: 9899494195,
             <a href="mailto:sabbellahemanth@gmail.com" class="text-primary" >sabbellahemanth@gmail.com</a>
           </div>
-          <p class="mb-5">I am an Electronics and Computers enthusiastic and I love to integrate their applications in interdisciplinary fields. Currently, I am working in Neuronics lab, IISc and graduated from IIITD in Electronics and Communication Engineering(2017). Everything I am into is in hashtags.</p>
+          <p class="mb-5">I am a VLSI and embedded electronics enthusiastic and I love to integrate their applications in interdisciplinary fields. Currently, I am working in Neuronics lab, IISc and graduated from IIITD in Electronics and Communication Engineering(2017). Everything I am into is in hashtags.</p>
           <h7 class="text-primary"> #VLSI #AnalogCircuits #EmbeddedElectronics #CircuitDesign #AbitofML</h7>
           
       
