--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
           <div class="subheading mb-5">M: 9899494195,
             <a href="mailto:sabbellahemanth@gmail.com" class="text-primary" >sabbellahemanth@gmail.com</a>
           </div>
-          <p class="mb-5">I am an electronics and computers enthusiastic and I love to integrate their applications in interdisciplinary fields. Currently, I am working in Neuronics lab, IISc and graduated from IIITD in Electronics and Communication Engineering(2017). Everything I am into is in hashtags.</p>
-          <h7 class="text-primary"> #VLSI #AnalogCircuits #EmbeddedElectronics #CircuitDesign #AbitofML</h7>
+          <p class="mb-5">I work on VLSI and embedded systems and  integrating their applications in interdisciplinary fields. Currently, I am working in Neuronics lab, IISc and graduated from IIITD in Electronics and Communication Engineering(2017). Everything I am into is in hashtags.</p>
+          <h7 class="text-primary"> #EmbeddedElectronics #VLSI #AnalogCircuits #CircuitDesign #AbitofML</h7>
           
       
         </div>
