--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
           <div class="subheading mb-5">M: 9899494195,
             <a href="mailto:sabbellahemanth@gmail.com" class="text-primary" >sabbellahemanth@gmail.com</a>
           </div>
-          <p class="mb-5">I work on Embedded systems and VLSI, integrating their applications in interdisciplinary fields. Currently, I am working in Neuronics lab, IISc and graduated from IIITD in Electronics and Communication Engineering(2017). Everything I am into is in hashtags.</p>
+          <p>Namaste!</p>
+          <p class="mb-5"> I am Hemanth Sabbella and I work as Research assistant in Neuronics Lab, IISc. I am into Embedded systems and VLSI, integrating their applications in interdisciplinary fields. Everything I am into is in hashtags.</p>
           <h7 class="text-primary"> #EmbeddedElectronics #VLSI #AnalogCircuits #CircuitDesign #AbitofML</h7>
           
       
