--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
           <hr>
             
           <div class="subheading mb-3">SoC Security: A logic level methodology to prevent Differential power analysis</div>
-          <div> Measuring the power consumption of the every logic transition will reveal the information the is being processed in the chip. This project is to develop a logic methodology which has constant power consumption for every transition. A side channel attack is implemented on the FPGA with the logic methodology that was developed and the power consumption is shown constant.</div>
+          <div> Measuring the power consumption of the every logic transition will reveal the information that is being processed in the chip. This project is to develop a logic methodology which has constant power consumption for every transition. A side channel attack is implemented on the FPGA with the logic methodology that was developed and the power consumption is shown constant.</div>
           <div>Guide: Dr. Sujay Deb</div>
           <div>Technologies and Languages: FPGA, DPO and Verilog </div>
           <a href="https://github.com/HemanthSabbella/Project_Reports/blob/master/SoC%20Presentation.pdf" class="text-primary" >PPT[Link]<br /></a>
@@ -267,7 +267,7 @@
           <p>  &#8594 Organiser, Circuitrix Jr(`15)</p>
           <hr>
 
-          <div class="subheading mb-3">ECE current’15, vol 3<a href="https://github.com/HemanthSabbella/HemanthSabbella.github.io/blob/master/img/NGO_CommunityWork.jpg" class="text-primary">[n]</a></div>
+          <div class="subheading mb-3">ECE current’15, vol 3<a href="https://github.com/HemanthSabbella/HemanthSabbella.github.io/blob/master/ECE%20Newsletter%20Volume%203.pdf" class="text-primary">[n]</a></div>
           <p>     &#8594 Content writer - Recent Innovations</p>
           <p>    &#8594 Graphic Designer</p>
           <hr>
