--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <a href="mailto:sabbellahemanth@gmail.com" class="text-primary" >sabbellahemanth@gmail.com</a>
           </div>
           <p>Namaste!</p>
-          <p class="mb-5"> I am Hemanth Sabbella and I work as Research assistant in Neuronics Lab, IISc. I am into Embedded systems and VLSI; interested in integrating their applications into interdisciplinary fields. Everything I am into is in hashtags.</p>
+          <p class="mb-5"> I am Hemanth Sabbella and I work as Research Assistant in Neuronics Lab, IISc. My research interests lie in Embedded systems and VLSI; integrating their applications into interdisciplinary fields. Everything I am into is in hashtags.</p>
           <h7 class="text-primary"> #EmbeddedElectronics #VLSI #AnalogCircuits #CircuitDesign #AbitofML</h7>
           
       
