--- a/index.html
+++ b/index.html
@@ -193,12 +193,13 @@
           <a href = "https://github.com/HemanthSabbella/Project_Reports/blob/master/MSD_project_final.pdf" class="text-primary" >Poster[Link]<br /></a>
           <br>
           <hr>
-          <div class="subheading mb-3">Low power CMOS comparator</div>
+          <pre><div class="subheading mb-3">Low power CMOS comparator</div>
           <div> Design of low power CMOS comparator using a differential amplifier with a gain enhancement stage.</div>
           <div>Guide: Dr. M.S.Hashmi</div>
           <div> Tools: Cadence - Virtuoso</div>
           <a href="https://github.com/HemanthSabbella/Project_Reports/blob/master/CMOS_Project.pdf" class="text-primary" >Report[Link]<br /></a>
-          <br>
+         </pre>
+         <br>
           <hr>
           <div class="subheading mb-3">PCB/Circuit Design and Fabrication</div>
           
