--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@
           <h2 class="mb-0">Hemanth Sabbella
             <span class="text-secondary">(Sai Hemanth Reddy Sabbella)</span>
           </h2>
-          <div class="subheading mb-5">M: 9899494195,
+          <div class="subheading mb-5">M: 9899494195;
+            <a href="mailto:hemanthrs@iisc.ac.in" class="text-primary" >hemanthrs@iisc.ac.in</a>
+            <a href="mailto:sabbella13152@iiitd.ac.in" class="text-primary" >sabbella13152@iiitd.ac.in</a>
             <a href="mailto:sabbellahemanth@gmail.com" class="text-primary" >sabbellahemanth@gmail.com</a>
           </div>
           <p>Namaste!</p>
