--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
               <div class="subheading mb-3">Neuronics lab, IISc</div>
                <ul>
               <li>Circuit designing and FPGA design of low-cost portable super-resolution ultrasound imaging system </li>
-              <li>Hardware prototype design of unlimited dynamic range(UDR) ADC </li>
-              <li>Voltage sensing of silver(Ag) nanoparticles and their effects</li>
+              <li>Hardware prototype design of unlimited dynamic range(UDR) ADC<a href="" class="text-primary"> [Patent submitted & Paper submitted]</a> </li>
+              <li>Voltage induced synthesis of metal nanoparticles and their effects<a href="" class="text-primary"> [Patent in progess & Paper in progess]</a></li>
             </ul> 
             
             </div>
