--- a/index.html
+++ b/index.html
@@ -22,10 +22,12 @@
     <!-- Custom styles for this template -->
     <link href="css/resume.css" rel="stylesheet">
     <style>
-    img1 {
-      float: left;
-      padding-right: 15px; 
-    }
+       img {
+         border: 1px solid #ddd;
+         border-radius: 4px;
+         padding: 5px;
+         width: 150px;
+         }
     </style>
   </head>
 
