--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="projects">
         <div class="my-auto">
           <h2 class="mb-5">Projects</h2>
-   
+          <img src="img/MSD.png" alt="Paris">
           <div class="subheading mb-3">4th order Switched Capacitor narrowband BandPass filter</div>
           <div>Design of transistor level narrow bandpass filter of 4th order to filter out the brain waves in the frequncy range 25 Hz-100 Hz.  </div>
           <div>Guide: Dr. Pydi Ganga</div>
