--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
          border-radius: 4px;
          padding: 5px;
          width: 150px;
-         float: left;
-         padding-right: 15px;
+         float: right;
          }
        img1 {
          border: 1px solid #ddd;
